// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post event click pageSizeChange 1`] = `
<div class="container container--fluid">
  <div xs="12" class="col-sm-12 col-md-12 col">
    <h2>Posts</h2>
    <div>
      <div class="space-top-datatable">
        <p style="display: inline-block;">show</p>
        <div class="v-input select-page-size v-input--is-label-active v-input--is-dirty v-input--is-focused theme--light v-text-field v-select v-select--is-menu-active primary--text">
          <div class="v-input__control">
            <div role="button" aria-haspopup="listbox" aria-expanded="true" aria-owns="list-45" class="v-input__slot">
              <div class="v-select__slot">
                <div class="v-select__selections">
                  <div class="v-select__selection v-select__selection--comma">10</div><input id="pageSize" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light primary--text"></i></div>
                </div><input type="hidden" value="10">
              </div>
              <div class="v-menu">
                <transition-stub name="v-menu-transition">
                  <div class="v-menu__content theme--light menuable__content__active " style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8; display: none;">
                    <div role="listbox" tabindex="-1" class="v-list v-select-list v-sheet theme--light theme--light" id="list-45">
                      <div tabindex="0" aria-selected="false" id="list-item-64-0" role="option" class="v-list-item v-list-item--link theme--light">
                        <div class="v-list-item__content">
                          <div class="v-list-item__title">5</div>
                        </div>
                      </div>
                      <div tabindex="0" aria-selected="true" id="list-item-64-1" role="option" class="v-list-item primary--text v-list-item--active v-list-item--link theme--light">
                        <div class="v-list-item__content">
                          <div class="v-list-item__title">10</div>
                        </div>
                      </div>
                      <div tabindex="0" aria-selected="false" id="list-item-64-2" role="option" class="v-list-item v-list-item--link theme--light">
                        <div class="v-list-item__content">
                          <div class="v-list-item__title">20</div>
                        </div>
                      </div>
                    </div>
                  </div>
                </transition-stub>
              </div>
            </div>
            <div class="v-text-field__details">
              <div class="v-messages theme--light primary--text">
                <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
              </div>
            </div>
          </div>
        </div>
        <p style="display: inherit;">entires</p>
        <div class="space-search">
          <div class="v-input search theme--light v-text-field v-text-field--single-line">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-text-field__slot"><label for="input-50" class="v-label theme--light" style="left: 0px; position: absolute;">search</label><input id="input-50" type="text"></div>
              </div>
              <div class="v-text-field__details">
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="v-data-table elevation-1 theme--light">
        <div class="v-data-table__wrapper">
          <table>
            <colgroup>
              <col class="">
              <col class="">
              <col class="">
              <col class="">
              <col class="">
            </colgroup>
            <thead class="v-data-table-header">
              <tr>
                <th role="columnheader" scope="col" aria-label="No." class="text-start"><span>No.</span></th>
                <th role="columnheader" scope="col" aria-label="Actions" class="text-start"><span>Actions</span></th>
                <th role="columnheader" scope="col" aria-label="Title" class="text-start"><span>Title</span></th>
                <th role="columnheader" scope="col" aria-label="Date" class="text-start"><span>Date</span></th>
                <th role="columnheader" scope="col" aria-label="Author" class="text-start"><span>Author</span></th>
              </tr>
            </thead>
            <thead>
              <tr class="v-data-table__progress">
                <th colspan="5" class="column">
                  <div role="progressbar" aria-valuemin="0" aria-valuemax="100" class="v-progress-linear v-progress-linear--absolute theme--light" style="height: 4px;">
                    <div class="v-progress-linear__background primary" style="opacity: 0.3; left: 0%; width: 100%;"></div>
                    <div class="v-progress-linear__buffer"></div>
                    <transition-stub name="fade-transition">
                      <div class="v-progress-linear__indeterminate v-progress-linear__indeterminate--active">
                        <div class="v-progress-linear__indeterminate long primary"></div>
                        <div class="v-progress-linear__indeterminate short primary"></div>
                      </div>
                    </transition-stub>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr class="v-data-table__empty-wrapper">
                <td colspan="5">Loading..</td>
              </tr>
            </tbody>
          </table>
        </div>
      </div> <br>
      <nav role="navigation" aria-label="Pagination Navigation" style="float: right;">
        <ul class="v-pagination v-pagination--disabled theme--light">
          <li><button type="button" aria-label="Previous page" class="v-pagination__navigation v-pagination__navigation--disabled"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-left theme--light"></i></button></li>
          <li><button type="button" aria-label="Next page" class="v-pagination__navigation v-pagination__navigation--disabled"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-right theme--light"></i></button></li>
        </ul>
      </nav>
    </div>
  </div>
</div>
`;

exports[`Post event click pageSizeChange value 10 1`] = `
<div class="container container--fluid">
  <div xs="12" class="col-sm-12 col-md-12 col">
    <h2>Posts</h2>
    <div>
      <div class="space-top-datatable">
        <p style="display: inline-block;">show</p>
        <div class="v-input select-page-size v-input--is-label-active v-input--is-dirty v-input--is-focused theme--light v-text-field v-select v-select--is-menu-active primary--text">
          <div class="v-input__control">
            <div role="button" aria-haspopup="listbox" aria-expanded="true" aria-owns="list-65" class="v-input__slot">
              <div class="v-select__slot">
                <div class="v-select__selections">
                  <div class="v-select__selection v-select__selection--comma">10</div><input id="pageSize" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light primary--text"></i></div>
                </div><input type="hidden" value="10">
              </div>
              <div class="v-menu">
                <transition-stub name="v-menu-transition">
                  <div class="v-menu__content theme--light menuable__content__active " style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8; display: none;">
                    <div role="listbox" tabindex="-1" class="v-list v-select-list v-sheet theme--light theme--light" id="list-65">
                      <div tabindex="0" aria-selected="false" id="list-item-84-0" role="option" class="v-list-item v-list-item--link theme--light">
                        <div class="v-list-item__content">
                          <div class="v-list-item__title">5</div>
                        </div>
                      </div>
                      <div tabindex="0" aria-selected="true" id="list-item-84-1" role="option" class="v-list-item primary--text v-list-item--active v-list-item--link theme--light">
                        <div class="v-list-item__content">
                          <div class="v-list-item__title">10</div>
                        </div>
                      </div>
                      <div tabindex="0" aria-selected="false" id="list-item-84-2" role="option" class="v-list-item v-list-item--link theme--light">
                        <div class="v-list-item__content">
                          <div class="v-list-item__title">20</div>
                        </div>
                      </div>
                    </div>
                  </div>
                </transition-stub>
              </div>
            </div>
            <div class="v-text-field__details">
              <div class="v-messages theme--light primary--text">
                <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
              </div>
            </div>
          </div>
        </div>
        <p style="display: inherit;">entires</p>
        <div class="space-search">
          <div class="v-input search theme--light v-text-field v-text-field--single-line">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-text-field__slot"><label for="input-70" class="v-label theme--light" style="left: 0px; position: absolute;">search</label><input id="input-70" type="text"></div>
              </div>
              <div class="v-text-field__details">
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="v-data-table elevation-1 theme--light">
        <div class="v-data-table__wrapper">
          <table>
            <colgroup>
              <col class="">
              <col class="">
              <col class="">
              <col class="">
              <col class="">
            </colgroup>
            <thead class="v-data-table-header">
              <tr>
                <th role="columnheader" scope="col" aria-label="No." class="text-start"><span>No.</span></th>
                <th role="columnheader" scope="col" aria-label="Actions" class="text-start"><span>Actions</span></th>
                <th role="columnheader" scope="col" aria-label="Title" class="text-start"><span>Title</span></th>
                <th role="columnheader" scope="col" aria-label="Date" class="text-start"><span>Date</span></th>
                <th role="columnheader" scope="col" aria-label="Author" class="text-start"><span>Author</span></th>
              </tr>
            </thead>
            <thead>
              <tr class="v-data-table__progress">
                <th colspan="5" class="column">
                  <div role="progressbar" aria-valuemin="0" aria-valuemax="100" class="v-progress-linear v-progress-linear--absolute theme--light" style="height: 4px;">
                    <div class="v-progress-linear__background primary" style="opacity: 0.3; left: 0%; width: 100%;"></div>
                    <div class="v-progress-linear__buffer"></div>
                    <transition-stub name="fade-transition">
                      <div class="v-progress-linear__indeterminate v-progress-linear__indeterminate--active">
                        <div class="v-progress-linear__indeterminate long primary"></div>
                        <div class="v-progress-linear__indeterminate short primary"></div>
                      </div>
                    </transition-stub>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr class="v-data-table__empty-wrapper">
                <td colspan="5">Loading..</td>
              </tr>
            </tbody>
          </table>
        </div>
      </div> <br>
      <nav role="navigation" aria-label="Pagination Navigation" style="float: right;">
        <ul class="v-pagination v-pagination--disabled theme--light">
          <li><button type="button" aria-label="Previous page" class="v-pagination__navigation v-pagination__navigation--disabled"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-left theme--light"></i></button></li>
          <li><button type="button" aria-label="Next page" class="v-pagination__navigation v-pagination__navigation--disabled"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-right theme--light"></i></button></li>
        </ul>
      </nav>
    </div>
  </div>
</div>
`;
